AI review, manual fix